# codex-watch

./: .env.example  .gitignore  pyproject.toml  readme.md
.codex/: PLAN_PROGRESS.md  PROJECT_PLAN.md  PROPOSED_PLAN.md  STARTUP_CHECKLIST.md
.github/workflows/: ci.yml  watch-codex-pr.yml
src/codexwatch/: __init__.py  config.py  discord_client.py  github_client.py  main.py  pipeline.py  state_store.py  summarizer.py
tests/: test_config.py  test_discord_client.py  test_github_client.py  test_main.py  test_pipeline.py  test_state_store.py  test_summarizer.py
